mise de l'interface principale

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <div class="container-fluid pt-3 vh-100">
   <div class="row height-main-row">
     <div class="d-none d-sm-block col-md-3 col-xl-2 navigate pe-2 h-100">
-      <!-- navigation et library -->
+      <app-navigation></app-navigation>
+      <app-library></app-library>
     </div>
 
     <div class="col-12 col-sm-12 col-md-9 col-xl-10 ps-0 h-100">
       <!-- headre -->
-      <div class="rounded-botton-2 p-3 bg-dark overflow-scroll full-height-main-content">
+      <div class="rounded-botton-2 p-3 bg-dark full-height-main-content">
         <router-outlet></router-outlet>
       </div>
     </div>
